--- a/Windows-Terminal/Windows-Terminal.html
+++ b/Windows-Terminal/Windows-Terminal.html
@@ -4,7 +4,10 @@
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
         <title>Windows Terminal - dots</title>
+
+
         <!-- Custom HTML head -->
+        
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,9 +19,11 @@
         <link rel="stylesheet" href="../css/general.css">
         <link rel="stylesheet" href="../css/chrome.css">
         <link rel="stylesheet" href="../css/print.css" media="print">
+
         <!-- Fonts -->
         <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
         <link rel="stylesheet" href="../fonts/fonts.css">
+
         <!-- Highlight.js Stylesheets -->
         <link rel="stylesheet" href="../highlight.css">
         <link rel="stylesheet" href="../tomorrow-night.css">
@@ -27,6 +32,7 @@
         <!-- Custom theme stylesheets -->
         <link rel="stylesheet" href="../.\theme\catppuccin.css">
         <link rel="stylesheet" href="../.\theme\catppuccin-highlight.css">
+
     </head>
     <body>
         <!-- Provide site root to javascript -->
@@ -77,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../Windows/Windows.html"><strong aria-hidden="true">1.</strong> Windows</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Windows/cpp/cpp.html"><strong aria-hidden="true">1.1.</strong> cpp</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Windows/cpp/msys.html"><strong aria-hidden="true">1.1.1.</strong> msys2</a></li><li class="chapter-item expanded "><a href="../Windows/cpp/vc.html"><strong aria-hidden="true">1.1.2.</strong> vcpkg & cmake</a></li></ol></li><li class="chapter-item expanded "><a href="../Windows/rust.html"><strong aria-hidden="true">1.2.</strong> rust</a></li><li class="chapter-item expanded "><a href="../Windows/settings.html"><strong aria-hidden="true">1.3.</strong> settings</a></li></ol></li><li class="chapter-item expanded "><a href="../Windows-Terminal/Windows-Terminal.html" class="active"><strong aria-hidden="true">2.</strong> Windows Terminal</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Windows-Terminal/Powershell/powershell.html"><strong aria-hidden="true">2.1.</strong> PowerShell</a></li></ol></li><li class="chapter-item expanded "><a href="../wsl/wsl.html"><strong aria-hidden="true">3.</strong> Windows Subsystem for Linux</a></li><li class="chapter-item expanded "><a href="../git/git.html"><strong aria-hidden="true">4.</strong> Git</a></li><li class="chapter-item expanded "><a href="../Database/database.html"><strong aria-hidden="true">5.</strong> Database</a></li><li class="chapter-item expanded "><a href="../dotfiles/dotfiles.html"><strong aria-hidden="true">6.</strong> dotfiles</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../Windows/Windows.html"><strong aria-hidden="true">1.</strong> Windows</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Windows/cpp.html"><strong aria-hidden="true">1.1.</strong> cpp</a></li><li class="chapter-item expanded "><a href="../Windows/rust.html"><strong aria-hidden="true">1.2.</strong> rust</a></li><li class="chapter-item expanded "><a href="../Windows/settings.html"><strong aria-hidden="true">1.3.</strong> settings</a></li></ol></li><li class="chapter-item expanded "><a href="../Windows-Terminal/Windows-Terminal.html" class="active"><strong aria-hidden="true">2.</strong> Windows Terminal</a></li><li class="chapter-item expanded "><a href="../wsl/wsl.html"><strong aria-hidden="true">3.</strong> Windows Subsystem for Linux</a></li><li class="chapter-item expanded "><a href="../git/git.html"><strong aria-hidden="true">4.</strong> Git</a></li><li class="chapter-item expanded "><a href="../Database/database.html"><strong aria-hidden="true">5.</strong> Database</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -85,7 +91,7 @@
         <div id="page-wrapper" class="page-wrapper">
 
             <div class="page">
-                <div id="menu-bar-hover-placeholder"></div>
+                                <div id="menu-bar-hover-placeholder"></div>
                 <div id="menu-bar" class="menu-bar sticky bordered">
                     <div class="left-buttons">
                         <button id="sidebar-toggle" class="icon-button" type="button" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
@@ -116,6 +122,7 @@
                         <a href="../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
+
                     </div>
                 </div>
 
@@ -129,6 +136,7 @@
                         </ul>
                     </div>
                 </div>
+
                 <!-- Apply ARIA attributes after the sidebar and the sidebar toggle button are added to the DOM -->
                 <script type="text/javascript">
                     document.getElementById('sidebar-toggle').setAttribute('aria-expanded', sidebar === 'visible');
@@ -141,17 +149,16 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="windows-terminal"><a class="header" href="#windows-terminal">Windows Terminal</a></h1>
-<ul>
-<li><a href="https://github.com/Eshanatnight/dotfiles/blob/main/Windows%20Terminal/settings.json">settings.json</a></li>
-<li><a href="https://github.com/Eshanatnight/dotfiles/tree/main/Windows%20Terminal/PowerShell">Powershell Folder</a></li>
-</ul>
 <h2 id="settingsjson"><a class="header" href="#settingsjson">settings.json</a></h2>
 <p>contains the settings for the terminal. Themes, colors, etc.</p>
+<ul>
+<li><a href="https://github.com/Eshanatnight/dotfiles/blob/main/Terminal/settings.json">settings.json</a></li>
+</ul>
 <h2 id="powershell-folder"><a class="header" href="#powershell-folder">Powershell Folder</a></h2>
 <ul>
-<li><a href="https://github.com/Eshanatnight/dotfiles/blob/main/Windows%20Terminal/PowerShell/Microsoft.PowerShell_profile.ps1">Powershell_Profile</a></li>
-<li><a href="https://github.com/Eshanatnight/dotfiles/blob/main/Windows%20Terminal/PowerShell/setup-windows-terminal.ps1">setup</a></li>
-<li><a href="https://github.com/Eshanatnight/dotfiles/tree/main/Windows%20Terminal/PowerShell/Theme">theme</a></li>
+<li><a href="https://github.com/Eshanatnight/dotfiles/blob/main/Terminal/PowerShell/Microsoft.PowerShell_profile.ps1">Powershell_Profile</a></li>
+<li><a href="https://github.com/Eshanatnight/dotfiles/blob/main/Terminal/PowerShell/setup-windows-terminal.ps1">setup</a></li>
+<li><a href="https://github.com/Eshanatnight/dotfiles/blob/main/Terminal/PowerShell/Theme/">theme</a></li>
 </ul>
 <h2 id="powershell_profile"><a class="header" href="#powershell_profile">Powershell_Profile</a></h2>
 <p>conains The Powershell Profile folder that has the profile for the terminal.</p>
@@ -168,11 +175,11 @@ conda config --set auto_activate_base false
 </code></pre>
 <p>Then restart the Terminal.</p>
 <h3 id="how-to-install-pip"><a class="header" href="#how-to-install-pip">How to install pip?</a></h3>
-<p>If for some reason you dont have pip installed in your computer. Run the <a href="https://github.com/Eshanatnight/dotfiles/blob/main/Python/get-pip.py">python script</a></p>
+<p>If for some reason you dont have pip installed in your computer. Run the <a href="https://github.com/Eshanatnight/dotfiles/blob/main/scripts/python/get-pip.py">python script</a></p>
 <pre><code class="language-terminal">cd python get-pip.py
 </code></pre>
 <h2 id="removed-settings"><a class="header" href="#removed-settings">Removed Settings</a></h2>
-<p>Settings that are removed from the <code>settings.json</code> of the Windows Terminal.</p>
+<p>Settings that are removed from the <a href="https://github.com/Eshanatnight/dotfiles/blob/main/Terminal/settings.json">settings.json</a> of the Windows Terminal.</p>
 <pre><code class="language-json">{
     &quot;profiles&quot;:{
         &quot;list&quot;: [
@@ -236,9 +243,11 @@ conda config --set auto_activate_base false
                             <a rel="prev" href="../Windows/settings.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
-                            <a rel="next" href="../Windows-Terminal/Powershell/powershell.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+
+                            <a rel="next" href="../wsl/wsl.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
+
                         <div style="clear: both"></div>
                     </nav>
                 </div>
@@ -248,23 +257,48 @@ conda config --set auto_activate_base false
                     <a rel="prev" href="../Windows/settings.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
-                    <a rel="next" href="../Windows-Terminal/Powershell/powershell.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+
+                    <a rel="next" href="../wsl/wsl.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
 
         </div>
 
+        <!-- Livereload script (if served using the cli tool) -->
+        <script type="text/javascript">
+            const wsProtocol = location.protocol === 'https:' ? 'wss:' : 'ws:';
+            const wsAddress = wsProtocol + "//" + location.host + "/" + "__livereload";
+            const socket = new WebSocket(wsAddress);
+            socket.onmessage = function (event) {
+                if (event.data === "reload") {
+                    socket.close();
+                    location.reload();
+                }
+            };
+
+            window.onbeforeunload = function() {
+                socket.close();
+            }
+        </script>
+
+
+
         <script type="text/javascript">
             window.playground_copyable = true;
         </script>
+
+
         <script src="../elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="../mark.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="../searcher.js" type="text/javascript" charset="utf-8"></script>
+
         <script src="../clipboard.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="../highlight.js" type="text/javascript" charset="utf-8"></script>
         <script src="../book.js" type="text/javascript" charset="utf-8"></script>
 
         <!-- Custom JS scripts -->
+
+
     </body>
 </html>
