--- a/Windows/cpp.html
+++ b/Windows/cpp.html
@@ -30,6 +30,8 @@
         <link rel="stylesheet" href="../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="../.\theme\catppuccin.css">
+        <link rel="stylesheet" href="../.\theme\catppuccin-highlight.css">
 
     </head>
     <body>
@@ -81,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../Windows/Windows.html"><strong aria-hidden="true">1.</strong> Windows</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Windows/cpp.html" class="active"><strong aria-hidden="true">1.1.</strong> cpp</a></li><li class="chapter-item expanded "><a href="../Windows/rust.html"><strong aria-hidden="true">1.2.</strong> rust</a></li><li class="chapter-item expanded "><a href="../Windows/settings.html"><strong aria-hidden="true">1.3.</strong> settings</a></li></ol></li><li class="chapter-item expanded "><a href="../Windows-Terminal/Windows-Terminal.html"><strong aria-hidden="true">2.</strong> Windows Terminal</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Windows-Terminal/Powershell/powershell.html"><strong aria-hidden="true">2.1.</strong> PowerShell</a></li></ol></li><li class="chapter-item expanded "><a href="../wsl/wsl.html"><strong aria-hidden="true">3.</strong> Windows Subsystem for Linux</a></li><li class="chapter-item expanded "><a href="../git/git.html"><strong aria-hidden="true">4.</strong> Git</a></li><li class="chapter-item expanded "><a href="../Database/database.html"><strong aria-hidden="true">5.</strong> Database</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../Windows/Windows.html"><strong aria-hidden="true">1.</strong> Windows</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Windows/cpp.html" class="active"><strong aria-hidden="true">1.1.</strong> cpp</a></li><li class="chapter-item expanded "><a href="../Windows/rust.html"><strong aria-hidden="true">1.2.</strong> rust</a></li><li class="chapter-item expanded "><a href="../Windows/settings.html"><strong aria-hidden="true">1.3.</strong> settings</a></li></ol></li><li class="chapter-item expanded "><a href="../Windows-Terminal/Windows-Terminal.html"><strong aria-hidden="true">2.</strong> Windows Terminal</a></li><li class="chapter-item expanded "><a href="../wsl/wsl.html"><strong aria-hidden="true">3.</strong> Windows Subsystem for Linux</a></li><li class="chapter-item expanded "><a href="../git/git.html"><strong aria-hidden="true">4.</strong> Git</a></li><li class="chapter-item expanded "><a href="../Database/database.html"><strong aria-hidden="true">5.</strong> Database</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -104,6 +106,10 @@
                             <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="ayu">Ayu</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="latte">Latte</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="frappe">Frappé</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="macchiato">Macchiato</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="mocha">Mocha</button></li>
                         </ul>
                         <button id="search-toggle" class="icon-button" type="button" title="Search. (Shortkey: s)" aria-label="Toggle Searchbar" aria-expanded="false" aria-keyshortcuts="S" aria-controls="searchbar">
                             <i class="fa fa-search"></i>
@@ -150,9 +156,17 @@
 <p><strong>Visual C++ Compiler stdc++=20</strong></p>
 </blockquote>
 <h3 id="installation-guide"><a class="header" href="#installation-guide">Installation guide</a></h3>
-<p>~ Install Visual Sudio</p>
-<p>~ Modify Installation</p>
-<p>~ Individual Components &gt; search <code>modules</code></p>
+<ul>
+<li>
+<p>Install Visual Sudio</p>
+</li>
+<li>
+<p>Modify Installation</p>
+</li>
+<li>
+<p>Individual Components &gt; search <code>modules</code></p>
+</li>
+</ul>
 <h3 id="activation"><a class="header" href="#activation">Activation</a></h3>
 <ul>
 <li>
@@ -196,7 +210,7 @@ pacman -S mingw-w64-clang-x86_64-toolchain
 <p>CMake can be installed via winget.</p>
 <h2 id="vcpkg"><a class="header" href="#vcpkg">Vcpkg</a></h2>
 <h3 id="installation"><a class="header" href="#installation">Installation</a></h3>
-<p>To install <em><strong>vcpkg</strong></em> you can run the <a href="../scripts/install-vcpkg.ps1">script</a>. It's a
+<p>To install <em><strong>vcpkg</strong></em> you can run the <a href=".https://github.com/Eshanatnight/dotfiles/blob/main/scripts/pwsh/upgrade-vcpkg.ps1">script</a>. It's a
 Poweshell Script that will clone the repository from the
 <a href="https://github.com/microsoft/vcpkg.git">official page</a> in the location <code>D:\tools\vcpkg</code>
 and then bootstrapping vcpkg.</p>
@@ -247,6 +261,21 @@ place where the top level <code>CMakelists.txt</code> file is.</p>
 }
 &quot;cmake.configureOnOpen&quot;: true
 </code></pre>
+<h2 id="jetbrains-ide-integration"><a class="header" href="#jetbrains-ide-integration">JetBrains IDE Integration</a></h2>
+<ol>
+<li>
+<p>In CLion, go to Settings / Preferences | Build, Execution, Deployment | Toolchains.</p>
+</li>
+<li>
+<p>Click plus icon to create a new toolchain and select WSL.</p>
+</li>
+</ol>
+<p>3.In the Environment field, select one of the available WSL distributions. The list includes the distributions detected by wsl.exe --list, which includes the imported ones.</p>
+<p>4.Now to start using the toolchain, do the following:</p>
+<ul>
+<li>CMake</li>
+<li>Makefile</li>
+</ul>
 
                     </main>
 
