--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
         <title>Windows - dots</title>
+
+
         <!-- Custom HTML head -->
+        
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,9 +19,11 @@
         <link rel="stylesheet" href="css/general.css">
         <link rel="stylesheet" href="css/chrome.css">
         <link rel="stylesheet" href="css/print.css" media="print">
+
         <!-- Fonts -->
         <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
         <link rel="stylesheet" href="fonts/fonts.css">
+
         <!-- Highlight.js Stylesheets -->
         <link rel="stylesheet" href="highlight.css">
         <link rel="stylesheet" href="tomorrow-night.css">
@@ -27,6 +32,7 @@
         <!-- Custom theme stylesheets -->
         <link rel="stylesheet" href=".\theme\catppuccin.css">
         <link rel="stylesheet" href=".\theme\catppuccin-highlight.css">
+
     </head>
     <body>
         <!-- Provide site root to javascript -->
@@ -77,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="Windows/Windows.html" class="active"><strong aria-hidden="true">1.</strong> Windows</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Windows/cpp/cpp.html"><strong aria-hidden="true">1.1.</strong> cpp</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Windows/cpp/msys.html"><strong aria-hidden="true">1.1.1.</strong> msys2</a></li><li class="chapter-item expanded "><a href="Windows/cpp/vc.html"><strong aria-hidden="true">1.1.2.</strong> vcpkg & cmake</a></li></ol></li><li class="chapter-item expanded "><a href="Windows/rust.html"><strong aria-hidden="true">1.2.</strong> rust</a></li><li class="chapter-item expanded "><a href="Windows/settings.html"><strong aria-hidden="true">1.3.</strong> settings</a></li></ol></li><li class="chapter-item expanded "><a href="Windows-Terminal/Windows-Terminal.html"><strong aria-hidden="true">2.</strong> Windows Terminal</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Windows-Terminal/Powershell/powershell.html"><strong aria-hidden="true">2.1.</strong> PowerShell</a></li></ol></li><li class="chapter-item expanded "><a href="wsl/wsl.html"><strong aria-hidden="true">3.</strong> Windows Subsystem for Linux</a></li><li class="chapter-item expanded "><a href="git/git.html"><strong aria-hidden="true">4.</strong> Git</a></li><li class="chapter-item expanded "><a href="Database/database.html"><strong aria-hidden="true">5.</strong> Database</a></li><li class="chapter-item expanded "><a href="dotfiles/dotfiles.html"><strong aria-hidden="true">6.</strong> dotfiles</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="Windows/Windows.html" class="active"><strong aria-hidden="true">1.</strong> Windows</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Windows/cpp.html"><strong aria-hidden="true">1.1.</strong> cpp</a></li><li class="chapter-item expanded "><a href="Windows/rust.html"><strong aria-hidden="true">1.2.</strong> rust</a></li><li class="chapter-item expanded "><a href="Windows/settings.html"><strong aria-hidden="true">1.3.</strong> settings</a></li></ol></li><li class="chapter-item expanded "><a href="Windows-Terminal/Windows-Terminal.html"><strong aria-hidden="true">2.</strong> Windows Terminal</a></li><li class="chapter-item expanded "><a href="wsl/wsl.html"><strong aria-hidden="true">3.</strong> Windows Subsystem for Linux</a></li><li class="chapter-item expanded "><a href="git/git.html"><strong aria-hidden="true">4.</strong> Git</a></li><li class="chapter-item expanded "><a href="Database/database.html"><strong aria-hidden="true">5.</strong> Database</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -85,7 +91,7 @@
         <div id="page-wrapper" class="page-wrapper">
 
             <div class="page">
-                <div id="menu-bar-hover-placeholder"></div>
+                                <div id="menu-bar-hover-placeholder"></div>
                 <div id="menu-bar" class="menu-bar sticky bordered">
                     <div class="left-buttons">
                         <button id="sidebar-toggle" class="icon-button" type="button" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
@@ -116,6 +122,7 @@
                         <a href="print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
+
                     </div>
                 </div>
 
@@ -129,6 +136,7 @@
                         </ul>
                     </div>
                 </div>
+
                 <!-- Apply ARIA attributes after the sidebar and the sidebar toggle button are added to the DOM -->
                 <script type="text/javascript">
                     document.getElementById('sidebar-toggle').setAttribute('aria-expanded', sidebar === 'visible');
@@ -161,54 +169,86 @@
 <h3 id="winget"><a class="header" href="#winget">Winget</a></h3>
 <ul>
 <li>Google.Chrome</li>
-<li>Google.Drive</li>
 <li>Giorgiotani.Peazip</li>
 <li>Kitware.CMake</li>
 <li>Microsoft.PowerToys</li>
+<li>TheDocumentFoundation.LibreOffice</li>
 <li>OpenJS.NodeJS</li>
-<li>Rustlang.Rustup</li>
 <li>SumatraPDF.SumatraPDF</li>
 <li>GnuWin32.Tar</li>
 <li>VLC media player</li>
+<li>Vivaldi</li>
 <li>OliverSchwendener.ueli</li>
 <li>JanDeDobbeleer.OhMyPosh</li>
 <li>Rainmeter.Rainmeter</li>
 <li>Microsoft.WindowsTerminal</li>
 <li>Git.Git</li>
+<li>Bitwarden.Bitwarden</li>
 <li>msys2.msys2</li>
 <li>Microsoft.VisualStudioCode</li>
+</ul>
+<h3 id="install-from-elsewhere"><a class="header" href="#install-from-elsewhere">Install from Elsewhere</a></h3>
+<ul>
+<li>rustup</li>
 </ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="next" href="Windows/cpp/cpp.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+
+                            <a rel="next" href="Windows/cpp.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
+
                         <div style="clear: both"></div>
                     </nav>
                 </div>
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="next" href="Windows/cpp/cpp.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+
+                    <a rel="next" href="Windows/cpp.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
 
         </div>
 
+        <!-- Livereload script (if served using the cli tool) -->
+        <script type="text/javascript">
+            const wsProtocol = location.protocol === 'https:' ? 'wss:' : 'ws:';
+            const wsAddress = wsProtocol + "//" + location.host + "/" + "__livereload";
+            const socket = new WebSocket(wsAddress);
+            socket.onmessage = function (event) {
+                if (event.data === "reload") {
+                    socket.close();
+                    location.reload();
+                }
+            };
+
+            window.onbeforeunload = function() {
+                socket.close();
+            }
+        </script>
+
+
+
         <script type="text/javascript">
             window.playground_copyable = true;
         </script>
+
+
         <script src="elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="mark.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="searcher.js" type="text/javascript" charset="utf-8"></script>
+
         <script src="clipboard.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="highlight.js" type="text/javascript" charset="utf-8"></script>
         <script src="book.js" type="text/javascript" charset="utf-8"></script>
 
         <!-- Custom JS scripts -->
+
+
     </body>
 </html>
